--- a/templates/matchDetails.html
+++ b/templates/matchDetails.html
@@ -122,7 +122,7 @@
                             <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i] ~ '_OriginalSquare.png/70px- '~ champions[i] ~ '_OriginalSquare.png?54659.png.webp' }}">
                         </a>
                     {% else %}
-                        <img src="url(https://wiki.leagueoflegends.com/en-us/images/Cappa_Juice_item.png?8aa04)">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/Cappa_Juice_item.png?8aa04">
                     {% endif %}
                     <br>{{champions[i]}}
                 </td>
