--- a/templates/matchHistory.html
+++ b/templates/matchHistory.html
@@ -90,7 +90,11 @@
             <a href="{{ url_for('myMatch', matchId=preview[4]) }}">
                 <div class="matchRow">
                     <div class="championElement">
-                        <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ preview[0] ~ '_OriginalSquare.png/70px-' ~ preview[0] ~ '_OriginalSquare.png?54659.png.webp' }}">
+                        {% if preview[0] != "Cappa" %}
+                            <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ preview[0] ~ '_OriginalSquare.png/70px-' ~ preview[0] ~ '_OriginalSquare.png?54659.png.webp' }}">
+                        {% else %}
+                            <img src="https://wiki.leagueoflegends.com/en-us/images/Cappa_Juice_item.png?8aa04">
+                        {% endif %}
                     </div>
                     <div class="detailsElement">
                         {% if preview[1][0][0] == "V" %}
